# DesignBuddy

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-build.yml  windows-build.yml
.superpowers/sdd/: task-3-report.md  task-4-report.md  task-5-report.md
docs/superpowers/plans/: 2026-07-01-mermaid-flowchart-flavour-implementation.md
src/: App.test.tsx  App.tsx  main.test.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AiDiagramDialog.tsx  AiMermaidModifyDialog.test.tsx  AiMermaidModifyDialog.tsx  AiModifyDialog.tsx  AiSettingsDialog.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DesignList.test.tsx  DesignList.tsx  EditorView.test.tsx  EditorView.tsx  LibraryView.test.tsx  LibraryView.tsx  MermaidEditorView.test.tsx  MermaidEditorView.tsx  MermaidPreview.tsx  ProjectSidebar.tsx  RenameDialog.test.tsx  RenameDialog.tsx  useDialogEscape.ts
src/hooks/: useAutosave.test.tsx  useAutosave.ts  useDesignLibrary.test.tsx  useDesignLibrary.ts
src/lib/: aiSettings.test.ts  aiSettings.ts  designApi.test.ts  designApi.ts  designNames.test.ts  designNames.ts  excalidrawScene.test.ts  excalidrawScene.ts  mermaidFlowchart.test.ts  mermaidFlowchart.ts  mermaidSource.test.ts  mermaidSource.ts  mermaidToExcalidraw.test.ts  mermaidToExcalidraw.ts  openaiDiagram.test.ts  openaiDiagram.ts  sceneValidation.test.ts  sceneValidation.ts  twilioComponents.test.ts  twilioComponents.ts
src/types/: designs.ts  excalidraw.ts
